election-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: election-api-deployment
  labels:
    app: election-api
spec:
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: election-api
  template:
    metadata:
      labels:
        app: election-api
    spec:
      containers:
      - name: election-api
        image: docker.io/library/election-api:local
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "1000Mi"
            cpu: "1000m"
          limits:
            memory: "4000Mi"
            cpu: "2000m"
