election-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: election-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: infinitytek.xyz
    http:
      paths:
      - path: /election/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: election-api-svc
            port:
              number: 8080
